# mini-3

./: .gitignore  CHANGELOG_CLEANUP.md  CLEANUP_PLAN.md  CLEANUP_SUMMARY.md  CONFIGURABLE_TIMEOUTS.md  EXPERIMENTS.md  HEALTH_HANDLING_SUMMARY.md  LOGGING_CHANGES.md  METRICS_EXTRACTION_SUMMARY.md  PERFORMANCE_TOOLS_README.md  PROJECT_REPORT.md  PROJECT_REPORT_mini2.txt  PROJECT_REPORT_mini3.txt  QUICK_START_TESTING.md  QUICK_TEST_COMMANDS.txt  README.md  RUN_ALL_DATASETS.txt  TIMEOUT_QUICK_REF.md  TIMEOUT_REDUCTION_SUMMARY.md  WSL_NETWORKING_FIX.md  gen_test_data.py  logs.txt  logs.txt.bak  performance_analysis.txt  ~$OJECT_REPORT_mini2.docx
MINI_2/: CMakeLists.txt  README.md  mini2-chunks.md
MINI_2/config/: network_setup.json  network_setup_ring.json  network_setup_windows.json  network_setup_with_python.json
MINI_2/localhost_results/: phase2_metrics.csv  phase3_comparison.csv
MINI_2/protos/: minitwo.proto
MINI_2/scripts/: build.sh  gen_proto.sh  start_node.sh  start_servers.sh  test_real_data.sh
MINI_2/src/cpp/: CMakeLists.txt
MINI_2/src/cpp/common/: SharedMemoryCoordinator.cpp  SharedMemoryCoordinator.h  config.h
MINI_2/src/cpp/server/: DataProcessor.cpp  DataProcessor.h  Handlers.cpp  RequestProcessor.cpp  RequestProcessor.h  ServerMain.cpp  SessionManager.cpp  WorkerQueue.h
MINI_2/src/cpp/tools/: inspect_shm.cpp
MINI_2/src/python/common/: minitwo_pb2_grpc.py.bak
MINI_2/src/python/server/: server.py
MINI_2/tests/: cpp_unit_tests.cpp  python_unit_tests.py
config/: network_setup.json
docs/: IMPLEMENTATION_GUIDE.md
localhost_results/: phase1_baseline.csv  phase2_test_results.md  weak_scaling.csv
logggg/: logs_testdata_10m.txt  logs_testdata_1m.txt
logs/: logs_10m_normal.txt  logs_10m_slowCD.txt  logs_1m_normal.txt  logs_1m_slowCD.txt  logs_500k_crashC.txt  logs_500k_slowCD.txt  logs_5m_crashC.txt  logs_5m_normal.txt  logs_5m_slowCD.txt  logs_testdata_10k.txt  logs_testdata_1k.txt  logs_testdata_200k.txt  logs_testdata_500k.txt  logs_testdata_5m.txt
protos/: minitwo.proto
results/: logggg_metrics.csv  mini3_metrics.csv
scripts/: WINDOWS_FIREWALL_FIX.ps1  WINDOWS_PORT_FORWARDING_COMMANDS.sh  capture_local_logs.sh  capture_run.sh  clear_logs.sh  comprehensive_test.sh  comprehensive_test_with_metrics.sh  critical_fix.sh  diagnose_and_fix.sh  diagnose_network.sh  emergency_fix.sh  final_fix.sh  find_windows_ips.sh  generate_charts.py  generate_proto.sh  make_short_log.sh  mark_logs.sh  network_diagnostics.sh  quick_test_pc1.sh  run_all_datasets_pc1.sh  run_all_tests.sh  run_client.sh  run_experiment_pair.sh  run_experiment_pc1.sh  run_experiment_pc2.sh  run_multi_clients.sh  setup_port_forwarding.sh  setup_windows_firewall.ps1  show_something_cool.sh  slice_logs_by_time.sh  slice_since_mark.sh  start_servers.sh  test_connectivity.sh  test_real_data.sh  test_timeout_configs.sh  wsl_setup.sh
src/cpp/: CMakeLists.txt
src/cpp/client/: ClientMain.cpp
src/cpp/common/: config.cpp  config.h  logging.h
src/cpp/server/: DataProcessor.cpp  Handlers.cpp  RequestProcessor.cpp  RequestProcessor.h  ServerMain.cpp  SessionManager.cpp  SessionManager.h  WorkerQueue.cpp
src/cpp/tools/: get_distributed_memory.cpp  show_distributed_memory.cpp
test_data/: gen_test_data.py
tools/: extract_metrics.py  plot_throughput.py
